- Fix for app view on smaller screens > added meta view content. - Adjust max-width for hiding icons on narrow app width

--- a/resources/style/global.scss
+++ b/resources/style/global.scss
@@ -490,7 +490,7 @@ img {
 }
 
 // --outliner-width
-@media (max-width: 20em) {
+@media (max-width: 15em) {
   #inspector {
     display: none;
   }
